--- a/views/comment.handlebars
+++ b/views/comment.handlebars
@@ -8,7 +8,7 @@
         <div class="col-sm-4">
             <div class="col-sm-12">
                 <div class="row" style="padding: 20px;">
-                    <form>
+                    <form id="createRatingForm">
                         <fieldset class="star-rating">
                             <div class="star-rating__stars">
                                 <input class="star-rating__input" type="radio" name="rating" value="1" id="rating-1" />
