--- a/views/usertrails.handlebars
+++ b/views/usertrails.handlebars
@@ -1,3 +1,18 @@
 
-<p>update trail menu</p>
-<p>Delete trail</p>
+<div class="container">
+    <div class="container-fluid">
+    <div class="row">
+        <div class="col-sm-6 deck" style="background-color: #d2dee0ff; padding: 10px">
+            <div class="row">
+                <h4 class="col-md-8 col-lg-10">This is a trail </h4>
+                <button class="btn"><span class="glyphicon glyphicon-trash"></span></button>
+                <button href="#demo" data-toggle="collapse" class="btn"><span class="glyphicon glyphicon-pencil"></span></button>
+            </div>
+            <div id="demo" class="collapse">
+                <p>Guitarist and Lead Vocalist</p>
+                <p>Loves long walks on the beach</p>
+                <p>Member since 1988</p>
+            </div>
+        </div>
+    </div>
+</div>
