--- a/views/homepage.handlebars
+++ b/views/homepage.handlebars
@@ -10,12 +10,14 @@
               <button class="btn filterBtn" type="submit"><i class="glyphicon glyphicon-search"></i></button>
             </div>
           </div>
+         
           <div class="input-group">
-              <a id="favorite-btn" class="btn filterBtn" href="/favorites/1" > Favorites <span class="glyphicon glyphicon-heart"></span></a>
+              <a id="favorite-btn" class="btn filterBtn" href="/favorites" > Favorites <span class="glyphicon glyphicon-heart"></span></a>
           </div>
               <div class="input-group">
-              <a id="myTrail-btn" class="btn filterBtn" href="/users/1"> My Trails <span class="glyphicon glyphicon-cog"></span></a>
+              <a id="myTrail-btn" class="btn filterBtn" href="/mytrails"> My Trails <span class="glyphicon glyphicon-cog"></span></a>
           </div>
+          
         </form>
     </div>
   </section>
@@ -35,7 +37,7 @@
                     </div>
                 </nav>
                     <a href="#demo{{id}}" data-toggle="collapse">
-                        <img src="/img/example.jpg" class="img-circle card" alt="Trail Image" width="255" height="255">
+                        <img src="{{img_ref}}" class="img-circle card" alt="Trail Image" width="255" height="255">
                     </a><br>
                     <ul class="list-inline">
                         <li><span class="glyphicon glyphicon-star"></span></li>
