fixed my routes and files

--- a/views/homepage.handlebars
+++ b/views/homepage.handlebars
@@ -56,7 +56,7 @@
                                 <p>Bikes {{#if bike_friendly }}<span class="glyphicon glyphicon-ok"></span>{{else}}<span class="glyphicon glyphicon-remove"></span>{{/if}}</p>
                             </div>
                         </div>
-                        <a href="/{{id}}">view {{comment.length}} comments(s) </a>
+                        <a href="/comment/{{id}}">view {{comment.length}} comments(s) </a>
                     </div>
             </div>
         </div>
