--- a/views/mytrails.handlebars
+++ b/views/mytrails.handlebars
@@ -6,7 +6,7 @@
             <div class="row" style="padding-bottom: 20px;">
                 <h4 class="col-md-8 col-lg-10">{{name}}</h4>
                 <button id="destroyTrailBtn" class="btn" value="{{id}}"><span class="glyphicon glyphicon-trash"></span></button>
-                <button href="#demo" data-toggle="collapse" class="btn"><span class="glyphicon glyphicon-pencil"></span></button>
+                <button id="updateTrailBtn" href="#demo" data-toggle="collapse" class="btn"><span class="glyphicon glyphicon-pencil"></span></button>
             </div>
             <div id="demo" class="collapse">
                 <!-- update trail -->
@@ -40,4 +40,4 @@
     </div>
 </div>
 
-<script src="/javascript/commentHandler.js"></script>
+<script src="/javascript/myTrails.js"></script>
